Fixed many outstanding issues, ie. incorrect mousedelta on resizing.

--- a/FlatEngine-Editor/FlatEngine-Editor.vcxproj.filters
+++ b/FlatEngine-Editor/FlatEngine-Editor.vcxproj.filters
@@ -26,5 +26,6 @@
     <ClCompile Include="Source\ScriptEditor.cpp" />
     <ClCompile Include="Source\TileSetEditor.cpp" />
     <ClCompile Include="Source\ProjectHub.cpp" />
+    <ClCompile Include="Source\PersistantObjectHierarchy.cpp" />
   </ItemGroup>
 </Project>
