--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1500,827
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -18,38 +18,38 @@ Size=260,159
 Collapsed=0
 
 [Window][Gameloop Control Panel]
-Pos=266,23
-Size=899,32
+Pos=280,23
+Size=1305,32
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=265,549
+Size=279,358
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=1166,23
-Size=334,549
+Pos=1586,23
+Size=334,685
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Game View]
-Pos=266,56
-Size=899,516
+Pos=280,56
+Size=1305,652
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene View]
-Pos=266,56
-Size=899,516
+Pos=280,56
+Size=1305,652
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Logger]
-Pos=0,573
-Size=691,277
+Pos=0,709
+Size=899,300
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -60,14 +60,14 @@ Collapsed=0
 DockId=0x00000002,1
 
 [Window][File Explorer]
-Pos=692,573
-Size=808,277
+Pos=900,709
+Size=1020,300
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=227,238
+Size=227,261
 
 [Window][Create Scene]
 Pos=620,345
@@ -75,14 +75,14 @@ Size=260,159
 Collapsed=0
 
 [Window][Tileset Editor]
-Pos=0,573
-Size=691,277
+Pos=0,709
+Size=899,300
 Collapsed=0
 DockId=0x0000000B,1
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
-Size=273,238
+Size=273,261
 
 [Window][Create New TileSet]
 Pos=620,345
@@ -118,6 +118,17 @@ Pos=622,390
 Size=255,69
 Collapsed=0
 
+[Window][Persistant GameObjects]
+Pos=0,382
+Size=279,326
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Create Prefab]
+Pos=620,355
+Size=260,139
+Collapsed=0
+
 [Table][0xDE426162,3]
 RefScale=13
 Column 0  Width=100
@@ -125,15 +136,17 @@ Column 1  Width=100
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1500,549 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=265,827 Selected=0x29EABFBD
-    DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1234,827 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=899,827 Split=Y Selected=0x642CEEBB
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1500,526 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=279,827 Split=Y Selected=0x29EABFBD
+      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,275 Selected=0x29EABFBD
+      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,250 HiddenTabBar=1 Selected=0xA2010517
+    DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1640,827 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1305,827 Split=Y Selected=0x642CEEBB
         DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
-        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,516 CentralNode=1 Selected=0x08AA43A5
+        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,493 CentralNode=1 Selected=0x08AA43A5
       DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0xE7039252
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1500,277 Split=X Selected=0x0340EFE6
-    DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=691,229 Selected=0x0340EFE6
-    DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=808,229 Selected=0xCAC6E4C7
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1500,300 Split=X Selected=0x0340EFE6
+    DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=702,229 Selected=0x0340EFE6
+    DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=797,229 Selected=0xCAC6E4C7
 
