--- a/FlatEngine-Editor/FlatEngine-Editor.vcxproj
+++ b/FlatEngine-Editor/FlatEngine-Editor.vcxproj
@@ -55,22 +55,22 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\..\..\..\Desktop\FlatEngine\windows-x86_64\Debug\FlatEngine-Editor\</OutDir>
-    <IntDir>..\..\..\..\Desktop\FlatEngine\Intermediates\windows-x86_64\Debug\FlatEngine-Editor\</IntDir>
+    <OutDir>..\..\..\..\Desktop\FlatEngine2D\windows-x86_64\Debug\FlatEngine-Editor\</OutDir>
+    <IntDir>..\..\..\..\Desktop\FlatEngine2D\Intermediates\windows-x86_64\Debug\FlatEngine-Editor\</IntDir>
     <TargetName>FlatEngine-Editor</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\..\..\..\Desktop\FlatEngine\windows-x86_64\Release\FlatEngine-Editor\</OutDir>
-    <IntDir>..\..\..\..\Desktop\FlatEngine\Intermediates\windows-x86_64\Release\FlatEngine-Editor\</IntDir>
+    <OutDir>..\..\..\..\Desktop\FlatEngine2D\windows-x86_64\Release\FlatEngine-Editor\</OutDir>
+    <IntDir>..\..\..\..\Desktop\FlatEngine2D\Intermediates\windows-x86_64\Release\FlatEngine-Editor\</IntDir>
     <TargetName>FlatEngine-Editor</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\..\..\..\Desktop\FlatEngine\windows-x86_64\Dist\FlatEngine-Editor\</OutDir>
-    <IntDir>..\..\..\..\Desktop\FlatEngine\Intermediates\windows-x86_64\Dist\FlatEngine-Editor\</IntDir>
+    <OutDir>..\..\..\..\Desktop\FlatEngine2D\windows-x86_64\Dist\FlatEngine-Editor\</OutDir>
+    <IntDir>..\..\..\..\Desktop\FlatEngine2D\Intermediates\windows-x86_64\Dist\FlatEngine-Editor\</IntDir>
     <TargetName>FlatEngine-Editor</TargetName>
     <TargetExt>.exe</TargetExt>
   </PropertyGroup>
@@ -160,6 +160,7 @@
     <ClCompile Include="Source\Log.cpp" />
     <ClCompile Include="Source\MainMenu.cpp" />
     <ClCompile Include="Source\MappingContextEditor.cpp" />
+    <ClCompile Include="Source\PersistantObjectHierarchy.cpp" />
     <ClCompile Include="Source\Profiler.cpp" />
     <ClCompile Include="Source\ProjectHub.cpp" />
     <ClCompile Include="Source\SceneView.cpp" />
