Polishing and getting ready for the release of v1.0

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1920,986
+Size=1500,827
 Collapsed=0
 
 [Window][Debug##Default]
@@ -18,38 +18,38 @@ Size=260,159
 Collapsed=0
 
 [Window][Gameloop Control Panel]
-Pos=280,23
-Size=1305,32
+Pos=237,23
+Size=928,32
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=279,358
+Size=236,294
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=1586,23
-Size=334,685
+Pos=1166,23
+Size=334,526
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Game View]
-Pos=280,56
-Size=1305,652
+Pos=237,56
+Size=928,493
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene View]
-Pos=280,56
-Size=1305,652
+Pos=237,56
+Size=928,493
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Logger]
-Pos=0,709
-Size=899,300
+Pos=0,550
+Size=702,300
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -60,8 +60,8 @@ Collapsed=0
 DockId=0x00000002,1
 
 [Window][File Explorer]
-Pos=900,709
-Size=1020,300
+Pos=703,550
+Size=797,300
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -75,23 +75,22 @@ Size=260,159
 Collapsed=0
 
 [Window][Tileset Editor]
-Pos=0,709
-Size=899,300
+Pos=319,215
+Size=702,300
 Collapsed=0
-DockId=0x0000000B,1
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
 Size=273,261
 
 [Window][Create New TileSet]
-Pos=620,345
-Size=260,159
+Pos=620,335
+Size=260,179
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=620,345
-Size=260,159
+Pos=620,335
+Size=260,179
 Collapsed=0
 
 [Window][Create Mapping Context]
@@ -109,8 +108,8 @@ IsChild=1
 Size=270,387
 
 [Window][Mapping Context Editor]
-Pos=60,60
-Size=634,497
+Pos=259,120
+Size=737,476
 Collapsed=0
 
 [Window][Are You Sure?]
@@ -119,14 +118,38 @@ Size=255,69
 Collapsed=0
 
 [Window][Persistant GameObjects]
-Pos=0,382
-Size=279,326
+Pos=0,318
+Size=236,231
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Create Prefab]
 Pos=620,355
 Size=260,139
+Collapsed=0
+
+[Window][Create New Mapping Context]
+Pos=597,335
+Size=306,179
+Collapsed=0
+
+[Window][Create New Animation]
+Pos=600,335
+Size=299,179
+Collapsed=0
+
+[Window][Animator]
+Pos=243,159
+Size=729,296
+Collapsed=0
+
+[Window][Animator/Animated Properties_4DB36E1A]
+IsChild=1
+Size=342,267
+
+[Window][Animator Preview]
+Pos=211,239
+Size=577,284
 Collapsed=0
 
 [Table][0xDE426162,3]
@@ -136,13 +159,13 @@ Column 1  Width=100
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y
   DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1500,526 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=279,827 Split=Y Selected=0x29EABFBD
-      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,275 Selected=0x29EABFBD
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,250 HiddenTabBar=1 Selected=0xA2010517
-    DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1640,827 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1305,827 Split=Y Selected=0x642CEEBB
+    DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=236,827 Split=Y Selected=0x29EABFBD
+      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,294 Selected=0x29EABFBD
+      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,231 Selected=0xA2010517
+    DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1263,827 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=928,827 Split=Y Selected=0x642CEEBB
         DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
         DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,493 CentralNode=1 Selected=0x08AA43A5
       DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0xE7039252
