Project and Scene creation bug fixes + UX additions.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -18,56 +18,56 @@ Size=260,159
 Collapsed=0
 
 [Window][Gameloop Control Panel]
-Pos=237,23
-Size=928,32
+Pos=287,23
+Size=878,32
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=236,294
+Size=286,297
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1166,23
-Size=334,526
+Size=334,485
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Game View]
-Pos=237,56
-Size=928,493
+Pos=287,56
+Size=878,452
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene View]
-Pos=237,56
-Size=928,493
+Pos=287,56
+Size=878,452
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Logger]
-Pos=0,550
-Size=702,300
+Pos=0,525
+Size=1500,325
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000004,0
 
 [Window][Profiler]
 Pos=1166,23
-Size=334,474
+Size=334,501
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][File Explorer]
-Pos=703,550
-Size=797,300
+Pos=703,509
+Size=797,341
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=227,261
+Size=227,302
 
 [Window][Create Scene]
 Pos=620,345
@@ -99,7 +99,7 @@ Size=278,159
 Collapsed=0
 
 [Window][Settings]
-Pos=241,111
+Pos=244,111
 Size=932,426
 Collapsed=0
 
@@ -118,8 +118,8 @@ Size=255,69
 Collapsed=0
 
 [Window][Persistant GameObjects]
-Pos=0,318
-Size=236,231
+Pos=0,321
+Size=286,187
 Collapsed=0
 DockId=0x00000006,0
 
@@ -152,6 +152,12 @@ Pos=211,239
 Size=577,284
 Collapsed=0
 
+[Window][Log]
+Pos=0,509
+Size=702,341
+Collapsed=0
+DockId=0x0000000B,0
+
 [Table][0xDE426162,3]
 RefScale=13
 Column 0  Width=100
@@ -159,17 +165,19 @@ Column 1  Width=100
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1500,526 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=236,827 Split=Y Selected=0x29EABFBD
-      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,294 Selected=0x29EABFBD
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,231 Selected=0xA2010517
-    DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1263,827 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=928,827 Split=Y Selected=0x642CEEBB
-        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
-        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,493 CentralNode=1 Selected=0x08AA43A5
-      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0xE7039252
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1500,300 Split=X Selected=0x0340EFE6
-    DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=702,229 Selected=0x0340EFE6
-    DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=797,229 Selected=0xCAC6E4C7
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1500,485 Split=Y
+    DockNode        ID=0x00000003 Parent=0x0000000D SizeRef=1500,540 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=286,827 Split=Y Selected=0x29EABFBD
+        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,297 Selected=0x29EABFBD
+        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,187 Selected=0xA2010517
+      DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1249,827 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=914,827 Split=Y Selected=0x642CEEBB
+          DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
+          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,452 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0xE7039252
+    DockNode        ID=0x00000004 Parent=0x0000000D SizeRef=1500,325 Selected=0x0340EFE6
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,341 Split=X Selected=0x64F50EE5
+    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=702,265 Selected=0x64F50EE5
+    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=797,265 Selected=0xCAC6E4C7
 
