CircleCollider bug fixes.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -25,25 +25,25 @@ DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=286,297
+Size=286,299
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1166,23
-Size=334,485
+Size=334,531
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Game View]
 Pos=287,56
-Size=878,452
+Size=878,498
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene View]
 Pos=287,56
-Size=878,452
+Size=878,498
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -55,19 +55,19 @@ DockId=0x00000004,0
 
 [Window][Profiler]
 Pos=1166,23
-Size=334,485
+Size=334,531
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][File Explorer]
-Pos=703,509
-Size=797,341
+Pos=703,555
+Size=797,295
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=227,302
+Size=227,256
 
 [Window][Create Scene]
 Pos=620,345
@@ -118,8 +118,8 @@ Size=255,69
 Collapsed=0
 
 [Window][Persistant GameObjects]
-Pos=0,321
-Size=286,187
+Pos=0,323
+Size=286,231
 Collapsed=0
 DockId=0x00000006,0
 
@@ -153,8 +153,8 @@ Size=577,284
 Collapsed=0
 
 [Window][Log]
-Pos=0,509
-Size=702,341
+Pos=0,555
+Size=702,295
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -171,18 +171,18 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y
-  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1500,485 Split=Y
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1500,570 Split=Y
     DockNode        ID=0x00000003 Parent=0x0000000D SizeRef=1500,540 Split=X
       DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=286,827 Split=Y Selected=0x29EABFBD
-        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,297 Selected=0x29EABFBD
-        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,187 Selected=0xA2010517
+        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,321 Selected=0x29EABFBD
+        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,248 Selected=0xA2010517
       DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1249,827 Split=X
         DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=914,827 Split=Y Selected=0x642CEEBB
           DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,452 CentralNode=1 Selected=0x08AA43A5
+          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,537 CentralNode=1 Selected=0x642CEEBB
         DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0x1E6EB881
     DockNode        ID=0x00000004 Parent=0x0000000D SizeRef=1500,325 Selected=0x0340EFE6
-  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,341 Split=X Selected=0x64F50EE5
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,295 Split=X Selected=0x64F50EE5
     DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=702,265 Selected=0x64F50EE5
     DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=797,265 Selected=0xCAC6E4C7
 
