--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -179,8 +179,8 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split
       DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1249,827 Split=X
         DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=914,827 Split=Y Selected=0x642CEEBB
           DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,537 CentralNode=1 Selected=0x642CEEBB
-        DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0x1E6EB881
+          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,537 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0xE7039252
     DockNode        ID=0x00000004 Parent=0x0000000D SizeRef=1500,325 Selected=0x0340EFE6
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,295 Split=X Selected=0x64F50EE5
     DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=702,265 Selected=0x64F50EE5
