PrefabManager bug fixes. Code cleanup

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=32,32
+Size=1500,827
 Collapsed=0
 
 [Window][Debug##Default]
@@ -18,32 +18,32 @@ Size=260,159
 Collapsed=0
 
 [Window][Gameloop Control Panel]
-Pos=17,23
-Size=7,7
+Pos=278,23
+Size=901,31
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=16,8
+Size=277,321
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=25,23
-Size=7,15
+Pos=1180,23
+Size=320,465
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Game View]
-Pos=17,31
-Size=7,7
+Pos=278,55
+Size=901,433
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene View]
-Pos=17,31
-Size=7,7
+Pos=278,55
+Size=901,433
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -57,17 +57,17 @@ DockId=0x00000004,0
 Pos=1166,23
 Size=334,531
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000008,1
 
 [Window][File Explorer]
-Pos=16,39
-Size=16,16
+Pos=490,489
+Size=1010,361
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][File Explorer/File Explorer_A202D17B/Directories Panel_86750598]
 IsChild=1
-Size=227,256
+Size=227,322
 
 [Window][Create Scene]
 Pos=620,345
@@ -75,13 +75,14 @@ Size=260,159
 Collapsed=0
 
 [Window][Tileset Editor]
-Pos=319,215
-Size=702,300
+Pos=0,538
+Size=514,312
 Collapsed=0
+DockId=0x0000000B,3
 
 [Window][Tileset Editor/Tileset Editor_C04F5ECD/Toolbar_4D912FCE]
 IsChild=1
-Size=273,261
+Size=250,273
 
 [Window][Create New TileSet]
 Pos=620,335
@@ -99,7 +100,7 @@ Size=278,159
 Collapsed=0
 
 [Window][Settings]
-Pos=244,111
+Pos=321,161
 Size=932,426
 Collapsed=0
 
@@ -108,8 +109,8 @@ IsChild=1
 Size=270,387
 
 [Window][Mapping Context Editor]
-Pos=259,120
-Size=737,476
+Pos=316,136
+Size=770,476
 Collapsed=0
 
 [Window][Are You Sure?]
@@ -118,8 +119,8 @@ Size=255,69
 Collapsed=0
 
 [Window][Persistant GameObjects]
-Pos=0,32
-Size=16,6
+Pos=0,345
+Size=277,143
 Collapsed=0
 DockId=0x00000006,0
 
@@ -139,13 +140,14 @@ Size=299,179
 Collapsed=0
 
 [Window][Animator]
-Pos=243,159
-Size=729,296
+Pos=0,489
+Size=489,361
 Collapsed=0
+DockId=0x0000000B,1
 
 [Window][Animator/Animated Properties_4DB36E1A]
 IsChild=1
-Size=342,267
+Size=268,332
 
 [Window][Animator Preview]
 Pos=211,239
@@ -153,14 +155,20 @@ Size=577,284
 Collapsed=0
 
 [Window][Log]
-Pos=0,39
-Size=15,16
+Pos=0,489
+Size=489,361
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Keyframe Editor]
-Pos=60,60
-Size=268,251
+Pos=0,538
+Size=514,312
+Collapsed=0
+DockId=0x0000000B,2
+
+[Window][1]
+Pos=810,790
+Size=10,10
 Collapsed=0
 
 [Table][0xDE426162,3]
@@ -170,19 +178,19 @@ Column 1  Width=100
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=32,32 Split=Y
-  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1500,570 Split=Y
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1500,465 Split=Y
     DockNode        ID=0x00000003 Parent=0x0000000D SizeRef=1500,540 Split=X
-      DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=286,827 Split=Y Selected=0x29EABFBD
+      DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=277,827 Split=Y Selected=0x29EABFBD
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,321 Selected=0x29EABFBD
-        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,248 Selected=0xA2010517
-      DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1249,827 Split=X
-        DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=914,827 Split=Y Selected=0x642CEEBB
-          DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=985,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=985,537 CentralNode=1 Selected=0x08AA43A5
-        DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=334,827 Selected=0xE7039252
+        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=265,143 Selected=0xA2010517
+      DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=1258,827 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=901,492 Split=Y Selected=0x642CEEBB
+          DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=901,31 HiddenTabBar=1 Selected=0xF4A28255
+          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=901,433 CentralNode=1 Selected=0x08AA43A5
+        DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=320,492 Selected=0xE7039252
     DockNode        ID=0x00000004 Parent=0x0000000D SizeRef=1500,325 Selected=0x0340EFE6
-  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,295 Split=X Selected=0x64F50EE5
-    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=702,265 Selected=0x64F50EE5
-    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=797,265 Selected=0xCAC6E4C7
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,361 Split=X Selected=0xED03171C
+    DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=489,312 Selected=0x64F50EE5
+    DockNode        ID=0x0000000C Parent=0x0000000E SizeRef=1010,312 Selected=0xCAC6E4C7
 
