Improved ease of getting up and running from Github download.

--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,23
-Size=1500,827
+Pos=0,0
+Size=800,500
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,31 +10,31 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=294,23
-Size=914,32
+Size=1334,32
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=293,273
+Size=293,411
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Inspector]
-Pos=1209,23
-Size=291,520
+Pos=1629,23
+Size=291,679
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
 Pos=294,56
-Size=914,487
+Size=1334,646
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Scene View]
 Pos=294,56
-Size=914,487
+Size=1334,646
 Collapsed=0
 DockId=0x00000006,0
 
@@ -63,8 +63,8 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Animator]
-Pos=0,544
-Size=705,306
+Pos=0,703
+Size=903,306
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -84,6 +84,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Project Hub]
+Pos=0,0
 Size=800,500
 Collapsed=0
 
@@ -146,8 +147,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=706,544
-Size=794,306
+Pos=904,703
+Size=1016,306
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -283,8 +284,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,297
-Size=293,246
+Pos=0,435
+Size=293,267
 Collapsed=0
 DockId=0x00000013,0
 
@@ -299,8 +300,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,544
-Size=705,306
+Pos=0,703
+Size=903,306
 Collapsed=0
 DockId=0x0000000B,1
 
@@ -439,16 +440,16 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,500 Split=Y Selected=0x642CEEBB
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,520 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
-      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,273 Selected=0x29EABFBD
-      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,246 Selected=0xA2010517
+      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,411 Selected=0x29EABFBD
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,267 Selected=0xA2010517
     DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
       DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=914,620 Split=Y Selected=0x08AA43A5
         DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
           DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x08AA43A5
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x642CEEBB
         DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
       DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=291,620 Selected=0xE7039252
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
