--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=800,500
+Pos=0,23
+Size=1500,827
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,31 +10,31 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=294,23
-Size=1334,32
+Size=895,32
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=293,411
+Size=293,331
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Inspector]
-Pos=1629,23
-Size=291,679
+Pos=1190,23
+Size=310,520
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
 Pos=294,56
-Size=1334,646
+Size=895,487
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Scene View]
 Pos=294,56
-Size=1334,646
+Size=895,487
 Collapsed=0
 DockId=0x00000006,0
 
@@ -63,8 +63,8 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Animator]
-Pos=0,703
-Size=903,306
+Pos=0,544
+Size=705,306
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -84,7 +84,6 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Project Hub]
-Pos=0,0
 Size=800,500
 Collapsed=0
 
@@ -147,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=904,703
-Size=1016,306
+Pos=706,544
+Size=794,306
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -284,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,435
-Size=293,267
+Pos=0,355
+Size=293,188
 Collapsed=0
 DockId=0x00000013,0
 
@@ -300,10 +299,20 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,703
-Size=903,306
+Pos=0,544
+Size=705,306
 Collapsed=0
 DockId=0x0000000B,1
+
+[Window][Create Script]
+Pos=830,425
+Size=260,279
+Collapsed=0
+
+[Window][Create C++ Script]
+Pos=620,345
+Size=260,159
+Collapsed=0
 
 [Table][0xDE426162,3]
 RefScale=13
@@ -440,18 +449,18 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,500 Split=Y Selected=0x642CEEBB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,520 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
-      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,411 Selected=0x29EABFBD
-      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,267 Selected=0xA2010517
+      DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,432 Selected=0x29EABFBD
+      DockNode      ID=0x00000013 Parent=0x0000000A SizeRef=276,246 Selected=0xA2010517
     DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
-      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=914,620 Split=Y Selected=0x08AA43A5
+      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
         DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
           DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x642CEEBB
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x08AA43A5
         DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
-      DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=291,620 Selected=0xE7039252
+      DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
     DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
     DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0xCAC6E4C7
