--- a/FlatEngine-Core/FlatEngine-Core.vcxproj
+++ b/FlatEngine-Core/FlatEngine-Core.vcxproj
@@ -54,22 +54,22 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>C:\FlatEngine2DBuild\windows-x86_64\Debug\FlatEngine-Core\</OutDir>
-    <IntDir>C:\FlatEngine2DBuild\Intermediates\windows-x86_64\Debug\FlatEngine-Core\</IntDir>
+    <OutDir>..\..\..\..\Desktop\FlatEngine2D_Build\windows-x86_64\Debug\FlatEngine-Core\</OutDir>
+    <IntDir>..\..\..\..\Desktop\FlatEngine2D_Build\Intermediates\windows-x86_64\Debug\FlatEngine-Core\</IntDir>
     <TargetName>FlatEngine-Core</TargetName>
     <TargetExt>.lib</TargetExt>
     <ExternalIncludePath>..\Vendor\includes\ImGui\Backends;..\Vendor\includes\ImGui\ImGui_Docking;..\Vendor\includes\ImGui\ImGui_Docking\misc\debuggers;..\Vendor\includes\SDL2\include;..\Vendor\includes\SDL2\lib\x64;..\Vendor\includes\SDL2_Image\include;..\Vendor\includes\SDL2_Image\lib\x64;..\Vendor\includes\SDL2_Text\include;..\Vendor\includes\SDL2_Text\lib\x64;..\Vendor\includes\SDL2_Mixer\include;..\Vendor\includes\SDL2_Mixer\lib\x64;..\Vendor\includes\Json_Formatter;..\Vendor\includes\ImPlot;..\Vendor\includes\ImSequencer;..\Vendor\includes\Lua;..\Vendor\includes\Sol2;..\Vendor\includes\Sol2\include;..\Vendor\includes\Sol2\include\sol;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>C:\FlatEngine2DBuild\windows-x86_64\Release\FlatEngine-Core\</OutDir>
-    <IntDir>C:\FlatEngine2DBuild\Intermediates\windows-x86_64\Release\FlatEngine-Core\</IntDir>
+    <OutDir>..\..\..\..\Desktop\FlatEngine2D_Build\windows-x86_64\Release\FlatEngine-Core\</OutDir>
+    <IntDir>..\..\..\..\Desktop\FlatEngine2D_Build\Intermediates\windows-x86_64\Release\FlatEngine-Core\</IntDir>
     <TargetName>FlatEngine-Core</TargetName>
     <TargetExt>.lib</TargetExt>
     <ExternalIncludePath>..\Vendor\includes\ImGui\Backends;..\Vendor\includes\ImGui\ImGui_Docking;..\Vendor\includes\ImGui\ImGui_Docking\misc\debuggers;..\Vendor\includes\SDL2\include;..\Vendor\includes\SDL2\lib\x64;..\Vendor\includes\SDL2_Image\include;..\Vendor\includes\SDL2_Image\lib\x64;..\Vendor\includes\SDL2_Text\include;..\Vendor\includes\SDL2_Text\lib\x64;..\Vendor\includes\SDL2_Mixer\include;..\Vendor\includes\SDL2_Mixer\lib\x64;..\Vendor\includes\Json_Formatter;..\Vendor\includes\ImPlot;..\Vendor\includes\ImSequencer;..\Vendor\includes\Lua;..\Vendor\includes\Sol2;..\Vendor\includes\Sol2\include;..\Vendor\includes\Sol2\include\sol;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
-    <OutDir>C:\FlatEngine2DBuild\windows-x86_64\Dist\FlatEngine-Core\</OutDir>
-    <IntDir>C:\FlatEngine2DBuild\Intermediates\windows-x86_64\Dist\FlatEngine-Core\</IntDir>
+    <OutDir>..\..\..\..\Desktop\FlatEngine2D_Build\windows-x86_64\Dist\FlatEngine-Core\</OutDir>
+    <IntDir>..\..\..\..\Desktop\FlatEngine2D_Build\Intermediates\windows-x86_64\Dist\FlatEngine-Core\</IntDir>
     <TargetName>FlatEngine-Core</TargetName>
     <TargetExt>.lib</TargetExt>
     <ExternalIncludePath>..\Vendor\includes\ImGui\Backends;..\Vendor\includes\ImGui\ImGui_Docking;..\Vendor\includes\ImGui\ImGui_Docking\misc\debuggers;..\Vendor\includes\SDL2\include;..\Vendor\includes\SDL2\lib\x64;..\Vendor\includes\SDL2_Image\include;..\Vendor\includes\SDL2_Image\lib\x64;..\Vendor\includes\SDL2_Text\include;..\Vendor\includes\SDL2_Text\lib\x64;..\Vendor\includes\SDL2_Mixer\include;..\Vendor\includes\SDL2_Mixer\lib\x64;..\Vendor\includes\Json_Formatter;..\Vendor\includes\ImPlot;..\Vendor\includes\ImSequencer;..\Vendor\includes\Lua;..\Vendor\includes\Sol2;..\Vendor\includes\Sol2\include;..\Vendor\includes\Sol2\include\sol;$(ExternalIncludePath)</ExternalIncludePath>
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Source;..\projects\FlatSpace\scripts\cpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -97,7 +97,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Source;..\projects\FlatSpace\scripts\cpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -121,7 +121,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Source;..\projects\FlatSpace\scripts\cpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -280,6 +280,9 @@
     <ClInclude Include="Source\Audio.h" />
     <ClInclude Include="Source\BoxCollider.h" />
     <ClInclude Include="Source\Button.h" />
+    <ClInclude Include="Source\CPPScript.h" />
+    <ClInclude Include="Source\CPPScriptHeaders.h" />
+    <ClInclude Include="Source\CPPScriptsHookup.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\Canvas.h" />
     <ClInclude Include="Source\CharacterController.h" />
@@ -294,6 +297,7 @@
     <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\Logger.h" />
     <ClInclude Include="Source\MappingContext.h" />
+    <ClInclude Include="Source\Matrix.h" />
     <ClInclude Include="Source\PrefabManager.h" />
     <ClInclude Include="Source\ProfilerProcess.h" />
     <ClInclude Include="Source\Project.h" />
@@ -332,6 +336,8 @@
     <ClCompile Include="Source\Audio.cpp" />
     <ClCompile Include="Source\BoxCollider.cpp" />
     <ClCompile Include="Source\Button.cpp" />
+    <ClCompile Include="Source\CPPScript.cpp" />
+    <ClCompile Include="Source\CPPScriptsHookup.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Canvas.cpp" />
     <ClCompile Include="Source\CharacterController.cpp" />
@@ -348,6 +354,7 @@
     <ClCompile Include="Source\Logger.cpp" />
     <ClCompile Include="Source\LuaFunctions.cpp" />
     <ClCompile Include="Source\MappingContext.cpp" />
+    <ClCompile Include="Source\Matrix.cpp" />
     <ClCompile Include="Source\PrefabManager.cpp" />
     <ClCompile Include="Source\Profiler.cpp" />
     <ClCompile Include="Source\ProfilerProcess.cpp" />
