--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -302,7 +302,7 @@ Collapsed=0
 Pos=0,544
 Size=705,306
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x0000000B,0
 
 [Window][Create Script]
 Pos=830,425
@@ -458,7 +458,7 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split
       DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
         DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
           DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x08AA43A5
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x642CEEBB
         DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
       DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
