--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=800,500
+Pos=0,23
+Size=1500,827
 Collapsed=0
 
 [Window][Debug##Default]
@@ -84,7 +84,6 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Project Hub]
-Pos=0,0
 Size=800,500
 Collapsed=0
 
@@ -450,7 +449,7 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,500 Split=Y Selected=0x642CEEBB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,520 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
       DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,432 Selected=0x29EABFBD
@@ -459,7 +458,7 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=800,500 Split=Y
       DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
         DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
           DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x642CEEBB
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x08AA43A5
         DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
       DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
