--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1500,827
+Size=1920,986
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,31 +10,31 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=294,23
-Size=895,32
+Size=1315,36
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Hierarchy]
 Pos=0,23
-Size=293,331
+Size=293,432
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Inspector]
-Pos=1190,23
-Size=310,520
+Pos=1610,23
+Size=310,679
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game View]
-Pos=294,56
-Size=895,487
+Pos=294,60
+Size=1315,642
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Scene View]
-Pos=294,56
-Size=895,487
+Pos=294,60
+Size=1315,642
 Collapsed=0
 DockId=0x00000006,0
 
@@ -60,16 +60,17 @@ DockId=0x00000003,0
 Pos=1077,544
 Size=423,306
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x0000000B,1
 
 [Window][Animator]
-Size=10,29
+Pos=0,544
+Size=751,306
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Animator/Animated Properties_4DB36E1A]
 IsChild=1
-Size=271,10
+Size=271,277
 
 [Window][1]
 Pos=978,919
@@ -83,7 +84,7 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Project Hub]
-Size=800,500
+Size=1500,850
 Collapsed=0
 
 [Window][Text Input]
@@ -117,7 +118,7 @@ Size=260,95
 Collapsed=0
 
 [Window][Create Lua Script]
-Pos=620,345
+Pos=830,425
 Size=260,159
 Collapsed=0
 
@@ -145,8 +146,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=738,544
-Size=762,306
+Pos=962,703
+Size=958,306
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -211,12 +212,12 @@ Size=299,179
 Collapsed=0
 
 [Window][Are You Sure?]
-Pos=622,390
+Pos=832,470
 Size=255,69
 Collapsed=0
 
 [Window][Create New Project]
-Pos=270,170
+Pos=620,345
 Size=260,159
 Collapsed=0
 
@@ -262,7 +263,7 @@ IsChild=1
 Size=1900,567
 
 [Window][Create Prefab]
-Pos=620,355
+Pos=830,435
 Size=260,139
 Collapsed=0
 
@@ -282,8 +283,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,355
-Size=293,188
+Pos=0,456
+Size=293,246
 Collapsed=0
 DockId=0x00000013,0
 
@@ -298,8 +299,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,544
-Size=737,306
+Pos=0,703
+Size=961,306
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -448,7 +449,7 @@ Column 5  Width=-1
 
 [Docking][Data]
 DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split=Y Selected=0x642CEEBB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,986 Split=Y Selected=0x642CEEBB
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1500,520 Split=X
     DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=293,691 Split=Y Selected=0x29EABFBD
       DockNode      ID=0x00000012 Parent=0x0000000A SizeRef=276,432 Selected=0x29EABFBD
@@ -456,13 +457,13 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1500,827 Split
     DockNode        ID=0x0000000D Parent=0x00000001 SizeRef=1206,691 Split=X Selected=0x08AA43A5
       DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=1315,620 Split=Y Selected=0x08AA43A5
         DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=1308,403 Split=Y Selected=0x642CEEBB
-          DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,32 HiddenTabBar=1 Selected=0xF4A28255
-          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,487 CentralNode=1 Selected=0x08AA43A5
+          DockNode  ID=0x00000005 Parent=0x0000000F SizeRef=892,36 HiddenTabBar=1 Selected=0xF4A28255
+          DockNode  ID=0x00000006 Parent=0x0000000F SizeRef=892,642 CentralNode=1 Selected=0x08AA43A5
         DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1308,205 Selected=0x8E5F85DE
       DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=310,620 Selected=0xE7039252
   DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1500,306 Split=X Selected=0x0340EFE6
     DockNode        ID=0x00000002 Parent=0x0000000E SizeRef=692,271 Selected=0x0340EFE6
-    DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0xCAC6E4C7
-      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=737,306 Selected=0x64F50EE5
-      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=762,306 Selected=0xCAC6E4C7
+    DockNode        ID=0x00000004 Parent=0x0000000E SizeRef=807,271 Split=X Selected=0x64F50EE5
+      DockNode      ID=0x0000000B Parent=0x00000004 SizeRef=961,306 Selected=0x64F50EE5
+      DockNode      ID=0x0000000C Parent=0x00000004 SizeRef=958,306 Selected=0xCAC6E4C7
 
